--- a/index.html
+++ b/index.html
@@ -134,7 +134,17 @@
             <a class="dropdown-item small" href="#">View all alerts</a>
           </div>
         </li>
-
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="teacherDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fa fa-fw fa-users"></i>Teachers/Advisors</a>
+          <div class="dropdown-menu p-3" aria-labelledby="teacherDropdown">
+            <a href="#" class="dropdown-item mb-2" data-toggle="modal" data-target="#teacherModal">Sir. Arslan Asif</a>
+            <a href="#" class="dropdown-item mb-2" data-toggle="modal" data-target="#teacherModal">Sir. Ahtisham Ali</a>
+            <a href="#" class="dropdown-item mb-2" data-toggle="modal" data-target="#teacherModal">Mam. Sadia Khalid</a>
+            <a href="#" class="dropdown-item mb-2" data-toggle="modal" data-target="#teacherModal">Sir. Adnan Abid</a>
+            <a href="#" class="dropdown-item mb-2" data-toggle="modal" data-target="#teacherModal">Mam. Ayesha Khan</a>
+          </div>
+        </li>
 
       </ul>
       <ul class="navbar-nav">
@@ -197,9 +207,9 @@
             <a href="#">
               <div class="card-body">
                 <h5 class="card-title float-right">
-                  <i class="fa fa-cloud-upload fa-3x"></i>
+                  <i class="fa fa-eye fa-3x"></i>
                 </h5>
-                <p class="card-text">Upload Result</p>
+                <p class="card-text">View <br> Result</p>
               </div>
             </a>
           </div>
@@ -253,7 +263,26 @@
         </div>
       </div>
     </footer>
-
+    <!-- Modal -->
+    <div class="modal fade" id="teacherModal" tabindex="-1" role="dialog" aria-labelledby="teacherModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="teacherModalLabel">Advisor Detail: <small>Teacher Name</small></h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            Details about project advisor will be displayed here
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Bootstrap core JavaScript-->
     <script src="vendor/jquery/jquery.min.js"></script>
