--- a/login.html
+++ b/login.html
@@ -14,45 +14,49 @@
   <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <!-- Custom styles for this template-->
   <link href="css/admin.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/custom.css">
 </head>
 
-<body  class="bg-dark">
-  
-      <div class="container">
-        <div class="card card-login mx-auto mt-5">
-          <div class="card-header">Login</div>
-          <div class="card-body">
-            <form>
-              <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
-                <input class="form-control" id="exampleInputEmail1" type="email" aria-describedby="emailHelp" placeholder="Enter email">
-              </div>
-              <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input class="form-control" id="exampleInputPassword1" type="password" placeholder="Password">
-              </div>
-              <div class="form-group">
-                <div class="form-check">
-                  <label class="form-check-label">
-                    <input class="form-check-input" type="checkbox"> Remember Password</label>
-                </div>
-              </div>
-              <a class="btn btn-primary btn-block" href="index.html">Login</a>
-            </form>
-            <div class="text-center">
-             
-              <a class="d-block small" href="forgot-password.html">Forgot Password?</a>
+<body class="bg-dark login">
+
+  <div class="container">
+    <div class="card card-login mx-auto mt-5">
+      <div class="card-header">Login</div>
+      <div class="card-body">
+        <form onsubmit="return validation()">
+          <div class="form-group">
+            <label for="userEmail">Email address</label>
+            <input class="form-control" id="userEmail" type="email" aria-describedby="emailHelp" placeholder="Enter email">
+            <span id="emailError"></span>
+          </div>
+          <div class="form-group">
+            <label for="userPassword">Password</label>
+            <input class="form-control" id="userPassword" type="password" placeholder="Password">
+            <span id="passError"></span>
+          </div>
+          <div class="form-group">
+            <div class="form-check">
+              <label class="form-check-label">
+                <input class="form-check-input" type="checkbox"> Remember Password</label>
             </div>
           </div>
+          <input type="submit" class="btn btn-primary btn-block" value="Login">
+        </form>
+        <div class="text-center">
+
+          <a class="d-block small" href="forgot-password.html">Forgot Password?</a>
         </div>
       </div>
+    </div>
+  </div>
 
-    <!-- Bootstrap core JavaScript-->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap core JavaScript-->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Custom scripts for all pages-->
-    <script src="js/admin.min.js"></script>
+  <!-- Custom scripts for all pages-->
+  <script src="js/admin.js"></script>
+  <script src="js/main.js"></script>
   </div>
 </body>
 
