--- a/template.html
+++ b/template.html
@@ -32,34 +32,34 @@
             <span class="nav-link-text">Dashboard</span>
           </a>
         </li>
-
-
+  
+  
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
           <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents" data-parent="#exampleAccordion">
-            <i class="fa fa-fw fa-wrench"></i>
-            <span class="nav-link-text">Components</span>
+            <i class=" fa fa-file-text"></i>
+            <span class="nav-link-text">Forms</span>
           </a>
           <ul class="sidenav-second-level collapse" id="collapseComponents">
             <li>
-              <a href="navbar.html">Navbar</a>
+              <a href="consent_form.html">Consent Form</a>
             </li>
             <li>
-              <a href="cards.html">Cards</a>
+              <a href="#">FYP Lab Form</a>
             </li>
           </ul>
         </li>
-
-
+  
+  
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Link">
-          <a class="nav-link" href="#">
-            <i class="fa fa-fw fa-link"></i>
-            <span class="nav-link-text">Link</span>
+          <a class="nav-link" href="fileManager.html">
+            <i class="fa fa-fw fa-file"></i>
+            <span class="nav-link-text">File Manager</span>
           </a>
         </li>
-
-
+  
+  
       </ul>
-
+  
       <ul class="navbar-nav mr-auto">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle mr-lg-2" id="messagesDropdown" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -117,8 +117,8 @@
               <span class="small float-right text-muted">11:21 AM</span>
               <div class="dropdown-message small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, placeat?</div>
             </a>
-
-
+  
+  
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">
               <span class="text-success">
@@ -132,17 +132,35 @@
             <a class="dropdown-item small" href="#">View all alerts</a>
           </div>
         </li>
-
-
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="teacherDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fa fa-fw fa-users"></i>Teachers/Advisors</a>
+          <div class="dropdown-menu p-3" aria-labelledby="teacherDropdown">
+            <a href="#" class="dropdown-item mb-2" data-toggle="modal" data-target="#teacherModal">Sir. Arslan Asif</a>
+            <a href="#" class="dropdown-item mb-2" data-toggle="modal" data-target="#teacherModal">Sir. Ahtisham Ali</a>
+            <a href="#" class="dropdown-item mb-2" data-toggle="modal" data-target="#teacherModal">Mam. Sadia Khalid</a>
+            <a href="#" class="dropdown-item mb-2" data-toggle="modal" data-target="#teacherModal">Sir. Adnan Abid</a>
+            <a href="#" class="dropdown-item mb-2" data-toggle="modal" data-target="#teacherModal">Mam. Ayesha Khan</a>
+          </div>
+        </li>
+  
       </ul>
       <ul class="navbar-nav">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="accountDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fa fa-fw fa-user"></i>User Name</a>
+          <div class="dropdown-menu" aria-labelledby="accountDropdown">
+            <a href="studenProfile.html" class="dropdown-item">Profile</a>
+          </div>
+        </li>
         <li class="nav-item">
-          <a class="nav-link">
+          <a class="nav-link" href="#">
             <i class="fa fa-fw fa-sign-out"></i>Logout</a>
         </li>
       </ul>
     </div>
   </nav>
+  <!-- content -->
   <div class="content-wrapper">
     <div class="container-fluid">
       <!-- Breadcrumbs-->
