--- a/consent_form.html
+++ b/consent_form.html
@@ -56,6 +56,12 @@
           <span class="nav-link-text">File Manager</span>
         </a>
       </li>
+      <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Link">
+        <a class="nav-link" href="view_result.html">
+          <i class="fa fa-fw fa-eye"></i>
+          <span class="nav-link-text">View Result</span>
+        </a>
+      </li>
 
 
     </ul>
@@ -96,6 +102,45 @@
           <a class="dropdown-item small" href="#">View all messages</a>
         </div>
       </li>
+
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle mr-lg-2" id="suggestionDropdown" href="#" data-toggle="dropdown" aria-haspopup="true"
+          aria-expanded="false">
+          <i class="fa fa-fw fa-lightbulb-o"></i>
+          <span class="d-lg-none">Suggestions
+            <span class="badge badge-pill badge-danger">4 New</span>
+          </span>
+          <span class="indicator text-danger d-none d-lg-block">
+            <i class="fa fa-fw fa-circle"></i>
+          </span>
+        </a>
+        <div class="dropdown-menu" aria-labelledby="suggestionDropdown">
+          <h6 class="dropdown-header">New Suggestions:</h6>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">
+            <strong>David Miller</strong>
+            <span class="small float-right text-muted">11:21 AM</span>
+            <div class="dropdown-message small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, nam!</div>
+          </a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">
+            <strong>Jane Smith</strong>
+            <span class="small float-right text-muted">11:21 AM</span>
+            <div class="dropdown-message small">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed nisi quae architecto non aut, hic repellat rerum
+              doloremque optio voluptatibus!</div>
+          </a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">
+            <strong>John Doe</strong>
+            <span class="small float-right text-muted">11:21 AM</span>
+            <div class="dropdown-message small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nam unde quasi, nisi reiciendis optio!</div>
+          </a>
+
+        </div>
+      </li>
+
+
+
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle mr-lg-2" id="alertsDropdown" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="fa fa-fw fa-bell"></i>
