--- a/index.html
+++ b/index.html
@@ -19,150 +19,194 @@
 </head>
 
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
-  <!-- Navigation-->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-    <a class="navbar-brand" href="index.html">Student Portal FYP</a>
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-      aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
-        <li class="nav-item active" data-toggle="tooltip" data-placement="right" title="Dashboard">
-          <a class="nav-link" href="index.html">
-            <i class="fa fa-fw fa-dashboard"></i>
-            <span class="nav-link-text">Dashboard</span>
+<!-- Navigation-->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
+  <a class="navbar-brand" href="index.html">Student Portal FYP</a>
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+    aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarResponsive">
+    <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
+      <li class="nav-item active" data-toggle="tooltip" data-placement="right" title="Dashboard">
+        <a class="nav-link" href="index.html">
+          <i class="fa fa-fw fa-dashboard"></i>
+          <span class="nav-link-text">Dashboard</span>
+        </a>
+      </li>
+
+
+      <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
+        <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents" data-parent="#exampleAccordion">
+          <i class=" fa fa-file-text"></i>
+          <span class="nav-link-text">Forms</span>
+        </a>
+        <ul class="sidenav-second-level collapse" id="collapseComponents">
+          <li>
+            <a href="consent_form.html">Consent Form</a>
+          </li>
+          <li>
+            <a href="#">FYP Lab Form</a>
+          </li>
+        </ul>
+      </li>
+
+
+      <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Link">
+        <a class="nav-link" href="fileManager.html">
+          <i class="fa fa-fw fa-file"></i>
+          <span class="nav-link-text">File Manager</span>
+        </a>
+      </li>
+      <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Link">
+        <a class="nav-link" href="view_result.html">
+          <i class="fa fa-fw fa-eye"></i>
+          <span class="nav-link-text">View Result</span>
+        </a>
+      </li>
+
+
+    </ul>
+
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle mr-lg-2" id="messagesDropdown" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <i class="fa fa-fw fa-envelope"></i>
+          <span class="d-lg-none">Messages
+            <span class="badge badge-pill badge-danger">12 New</span>
+          </span>
+          <span class="indicator text-danger d-none d-lg-block">
+            <i class="fa fa-fw fa-circle"></i>
+          </span>
+        </a>
+        <div class="dropdown-menu" aria-labelledby="messagesDropdown">
+          <h6 class="dropdown-header">New Messages:</h6>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">
+            <strong>David Miller</strong>
+            <span class="small float-right text-muted">11:21 AM</span>
+            <div class="dropdown-message small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, nam!</div>
           </a>
-        </li>
-
-
-        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
-          <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents" data-parent="#exampleAccordion">
-            <i class=" fa fa-file-text"></i>
-            <span class="nav-link-text">Forms</span>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">
+            <strong>Jane Smith</strong>
+            <span class="small float-right text-muted">11:21 AM</span>
+            <div class="dropdown-message small">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed nisi quae architecto non aut, hic repellat rerum
+              doloremque optio voluptatibus!</div>
           </a>
-          <ul class="sidenav-second-level collapse" id="collapseComponents">
-            <li>
-              <a href="consent_form.html">Consent Form</a>
-            </li>
-            <li>
-              <a href="#">FYP Lab Form</a>
-            </li>
-          </ul>
-        </li>
-
-
-        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Link">
-          <a class="nav-link" href="fileManager.html">
-            <i class="fa fa-fw fa-file"></i>
-            <span class="nav-link-text">File Manager</span>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">
+            <strong>John Doe</strong>
+            <span class="small float-right text-muted">11:21 AM</span>
+            <div class="dropdown-message small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nam unde quasi, nisi reiciendis optio!</div>
           </a>
-        </li>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item small" href="#">View all messages</a>
+        </div>
+      </li>
+
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle mr-lg-2" id="suggestionDropdown" href="#" data-toggle="dropdown" aria-haspopup="true"
+          aria-expanded="false">
+          <i class="fa fa-fw fa-lightbulb-o"></i>
+          <span class="d-lg-none">Suggestions
+            <span class="badge badge-pill badge-danger">4 New</span>
+          </span>
+          <span class="indicator text-danger d-none d-lg-block">
+            <i class="fa fa-fw fa-circle"></i>
+          </span>
+        </a>
+        <div class="dropdown-menu" aria-labelledby="suggestionDropdown">
+          <h6 class="dropdown-header">New Suggestions:</h6>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">
+            <strong>David Miller</strong>
+            <span class="small float-right text-muted">11:21 AM</span>
+            <div class="dropdown-message small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, nam!</div>
+          </a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">
+            <strong>Jane Smith</strong>
+            <span class="small float-right text-muted">11:21 AM</span>
+            <div class="dropdown-message small">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed nisi quae architecto non aut, hic repellat rerum
+              doloremque optio voluptatibus!</div>
+          </a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">
+            <strong>John Doe</strong>
+            <span class="small float-right text-muted">11:21 AM</span>
+            <div class="dropdown-message small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nam unde quasi, nisi reiciendis optio!</div>
+          </a>
+
+        </div>
+      </li>
 
 
-      </ul>
 
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle mr-lg-2" id="messagesDropdown" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fa fa-fw fa-envelope"></i>
-            <span class="d-lg-none">Messages
-              <span class="badge badge-pill badge-danger">12 New</span>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle mr-lg-2" id="alertsDropdown" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <i class="fa fa-fw fa-bell"></i>
+          <span class="d-lg-none">Alerts
+            <span class="badge badge-pill badge-warning">6 New</span>
+          </span>
+          <span class="indicator text-warning d-none d-lg-block">
+            <i class="fa fa-fw fa-circle"></i>
+          </span>
+        </a>
+        <div class="dropdown-menu" aria-labelledby="alertsDropdown">
+          <h6 class="dropdown-header">New Alerts:</h6>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">
+            <span class="text-success">
+              <strong>
+                <i class="fa fa-long-arrow-up fa-fw"></i>Status Update</strong>
             </span>
-            <span class="indicator text-danger d-none d-lg-block">
-              <i class="fa fa-fw fa-circle"></i>
-            </span>
+            <span class="small float-right text-muted">11:21 AM</span>
+            <div class="dropdown-message small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, placeat?</div>
           </a>
-          <div class="dropdown-menu" aria-labelledby="messagesDropdown">
-            <h6 class="dropdown-header">New Messages:</h6>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">
-              <strong>David Miller</strong>
-              <span class="small float-right text-muted">11:21 AM</span>
-              <div class="dropdown-message small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, nam!</div>
-            </a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">
-              <strong>Jane Smith</strong>
-              <span class="small float-right text-muted">11:21 AM</span>
-              <div class="dropdown-message small">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed nisi quae architecto non aut, hic repellat rerum
-                doloremque optio voluptatibus!</div>
-            </a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">
-              <strong>John Doe</strong>
-              <span class="small float-right text-muted">11:21 AM</span>
-              <div class="dropdown-message small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nam unde quasi, nisi reiciendis optio!</div>
-            </a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item small" href="#">View all messages</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle mr-lg-2" id="alertsDropdown" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fa fa-fw fa-bell"></i>
-            <span class="d-lg-none">Alerts
-              <span class="badge badge-pill badge-warning">6 New</span>
+
+
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">
+            <span class="text-success">
+              <strong>
+                <i class="fa fa-long-arrow-up fa-fw"></i>Status Update</strong>
             </span>
-            <span class="indicator text-warning d-none d-lg-block">
-              <i class="fa fa-fw fa-circle"></i>
-            </span>
+            <span class="small float-right text-muted">11:21 AM</span>
+            <div class="dropdown-message small">This is an automated server response message. All systems are online.</div>
           </a>
-          <div class="dropdown-menu" aria-labelledby="alertsDropdown">
-            <h6 class="dropdown-header">New Alerts:</h6>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">
-              <span class="text-success">
-                <strong>
-                  <i class="fa fa-long-arrow-up fa-fw"></i>Status Update</strong>
-              </span>
-              <span class="small float-right text-muted">11:21 AM</span>
-              <div class="dropdown-message small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, placeat?</div>
-            </a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item small" href="#">View all alerts</a>
+        </div>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="teacherDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <i class="fa fa-fw fa-users"></i>Teachers/Advisors</a>
+        <div class="dropdown-menu p-3" aria-labelledby="teacherDropdown">
+          <a href="#" class="dropdown-item mb-2" data-toggle="modal" data-target="#teacherModal">Sir. Arslan Asif</a>
+          <a href="#" class="dropdown-item mb-2" data-toggle="modal" data-target="#teacherModal">Sir. Ahtisham Ali</a>
+          <a href="#" class="dropdown-item mb-2" data-toggle="modal" data-target="#teacherModal">Mam. Sadia Khalid</a>
+          <a href="#" class="dropdown-item mb-2" data-toggle="modal" data-target="#teacherModal">Sir. Adnan Abid</a>
+          <a href="#" class="dropdown-item mb-2" data-toggle="modal" data-target="#teacherModal">Mam. Ayesha Khan</a>
+        </div>
+      </li>
 
-
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">
-              <span class="text-success">
-                <strong>
-                  <i class="fa fa-long-arrow-up fa-fw"></i>Status Update</strong>
-              </span>
-              <span class="small float-right text-muted">11:21 AM</span>
-              <div class="dropdown-message small">This is an automated server response message. All systems are online.</div>
-            </a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item small" href="#">View all alerts</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="teacherDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fa fa-fw fa-users"></i>Teachers/Advisors</a>
-          <div class="dropdown-menu p-3" aria-labelledby="teacherDropdown">
-            <a href="#" class="dropdown-item mb-2" data-toggle="modal" data-target="#teacherModal">Sir. Arslan Asif</a>
-            <a href="#" class="dropdown-item mb-2" data-toggle="modal" data-target="#teacherModal">Sir. Ahtisham Ali</a>
-            <a href="#" class="dropdown-item mb-2" data-toggle="modal" data-target="#teacherModal">Mam. Sadia Khalid</a>
-            <a href="#" class="dropdown-item mb-2" data-toggle="modal" data-target="#teacherModal">Sir. Adnan Abid</a>
-            <a href="#" class="dropdown-item mb-2" data-toggle="modal" data-target="#teacherModal">Mam. Ayesha Khan</a>
-          </div>
-        </li>
-
-      </ul>
-      <ul class="navbar-nav">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="accountDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fa fa-fw fa-user"></i>User Name</a>
-          <div class="dropdown-menu" aria-labelledby="accountDropdown">
-            <a href="studenProfile.html" class="dropdown-item">Profile</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">
-            <i class="fa fa-fw fa-sign-out"></i>Logout</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-
+    </ul>
+    <ul class="navbar-nav">
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="accountDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <i class="fa fa-fw fa-user"></i>User Name</a>
+        <div class="dropdown-menu" aria-labelledby="accountDropdown">
+          <a href="studenProfile.html" class="dropdown-item">Profile</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+          <i class="fa fa-fw fa-sign-out"></i>Logout</a>
+      </li>
+    </ul>
+  </div>
+</nav>
   <!-- content -->
   <div class="content-wrapper" id="home-content">
     <div class="container-fluid">
@@ -206,7 +250,7 @@
         <div class="col-sm-2">
 
           <div class="card text-white bg-info mb-2">
-            <a href="#">
+            <a href="view_result.html">
               <div class="card-body">
                 <h5 class="card-title float-right">
                   <i class="fa fa-eye fa-3x"></i>
